# por_extenso

./: README.md  pyproject.toml
docs/: testing.md
src/por_extenso/: __init__.py  funcoes.py
tests/: test_por_extenso.py
